crates/sui-adapter-transactional-tests/tests/shared/upgrade.exp
processed 7 tasks

init:
A: object(0,0)

task 1 'publish'. lines 8-40:
Error: warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpFqS248:10:23
   │
10 │     use sui::object::{Self, UID};
   │                       ^^^^ Unused 'use' of alias 'object'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpFqS248:12:27
   │
12 │     use sui::tx_context::{sender, TxContext};
   │                           ^^^^^^ Unused 'use' of alias 'sender'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpFqS248:12:35
   │
12 │     use sui::tx_context::{sender, TxContext};
   │                                   ^^^^^^^^^ Unused 'use' of alias 'TxContext'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpFqS248:17:17
   │
17 │         let mut mut o = Obj { id: object::new(ctx) };
   │                 ^^^
   │                 │
   │                 Unexpected 'mut'
   │                 Expected an identifier



task 2 'run'. lines 42-42:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'view-object'. lines 44-44:
Error: task 3, lines 44-44. Unbound fake id 2,2

task 4 'run'. lines 46-46:
Error: INVALID TEST. Unknown object, object(2,2)

task 5 'run'. lines 48-48:
Error: INVALID TEST. Unknown object, object(2,2)

task 6 'run'. lines 50-50:
Error: INVALID TEST. Unknown object, object(2,2)
